[package]
name = "loggest"
version = "0.1.0"
description = "A high performance logging facility for Rust's log crate"
authors = ["Dror Levin <spatz@psybear.com>"]
repository = "https://github.com/drrlvn/loggest"
license = "Apache-2.0"
edition = "2018"

[dependencies]
derive_more = "0.14"
failure = "0.1"
log = { version = "0.4", features = ["std"] }
nix = "0.13"
