[package]
name = "loggest"
version = "0.2.1"
description = "A high performance logging facility for Rust's log crate"
authors = ["Dror Levin <spatz@psybear.com>"]
repository = "https://github.com/drrlvn/loggest"
license = "Apache-2.0"
edition = "2018"

[dependencies]
bytes = "0.4.12"
derive_more = "0.99.2"
failure = "0.1.5"
log = { version = "0.4.8", features = ["std"] }
nix = "0.16.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["processthreadsapi"] }
