[package]
name = "ioym"
version = "0.1.2"
description = "A utility for extracting logs written by loggest"
authors = ["Dror Levin <spatz@psybear.com>"]
repository = "https://github.com/drrlvn/loggest"
license = "Apache-2.0"
edition = "2018"

[dependencies]
byteorder = "1.2"
chrono = "0.4"
failure = "0.1"
filetime = "0.2"
lazy_static = "1.2"
memchr = "2.1"
rayon = "1.0"
structopt = "0.2"
zstd = "0.4"
