[package]
name = "ioym"
version = "0.1.10"
description = "A utility for extracting logs written by loggest"
authors = ["Dror Levin <spatz@psybear.com>"]
repository = "https://github.com/Infinidat/loggest"
license = "Apache-2.0"
edition = "2018"

[dependencies]
byteorder = "1.3.2"
chrono = "0.4.9"
filetime = "0.2.7"
lazy_static = "1.4.0"
memchr = "2.2.1"
rayon = "1.2.0"
structopt = "0.3.2"
thiserror = "1.0.10"
zstd = "0.5.1"
