[package]
name = "loggestd"
version = "0.1.0"
description = "A daemon for high-performance logging"
authors = ["Roey Darwish Dror <roey.ghost@gmail.com>"]
repository = "https://github.com/drrlvn/loggest"
license = "Apache-2.0"
edition = "2018"

[dependencies]
tokio = "0.1.21"
bytes = "0.4.12"
byteorder = "1.3.2"
futures = "0.1"
log = "0.4.6"
env_logger = "0.6.1"
zstd = "0.4.24"
nix = "0.14.1"
structopt = "0.2.18"
tokio-signal = "0.2.7"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["impl-default"] }
widestring = "0.4.0"
