[package]
name = "loggestd"
version = "0.4.0"
description = "A daemon for high-performance logging"
authors = ["Roey Darwish Dror <roey.ghost@gmail.com>"]
repository = "https://github.com/drrlvn/loggest"
license = "Apache-2.0"
edition = "2018"

[dependencies]
tokio = "0.1.21"
bytes = "0.4.12"
byteorder = "1.3.2"
futures = "0.1"
log = "0.4.6"
env_logger = "0.6.1"
zstd = "0.4.24"
nix = "0.15.0"
structopt = "0.3.2"
tokio-signal = "0.2.7"

[target.'cfg(windows)'.dependencies]
crossbeam-channel = "0.3.9"
winapi = { version = "0.3.7", features = ["impl-default"] }
widestring = "0.4.0"
windows-service = "0.2.0"
