[package]
name = "loggestd"
version = "0.6.4"
description = "A daemon for high-performance logging"
authors = ["Roey Darwish Dror <roey.ghost@gmail.com>"]
repository = "https://github.com/drrlvn/loggest"
license = "Apache-2.0"
edition = "2018"

[dependencies]
byteorder = "1.3.2"
bytes = "0.4.12"
env_logger = "0.7.1"
futures = "0.1.29"
log = "0.4.8"
nix = "0.16.0"
structopt = "0.3.2"
tokio = "0.1.22"
tokio-signal = "0.2.7"
zstd = "0.5.1"

[target.'cfg(windows)'.dependencies]
crossbeam-channel = "0.3.9"
winapi = { version = "0.3.8", features = ["impl-default"] }
widestring = "0.4.0"
windows-service = "0.2.0"
